# pds-screen-recorder

./: .gitignore  CMakeLists.txt  README.md  config.h.in  pds-screen-recorder.sln
assets/: icon_off.c  icon_off.xpm  icon_on.c  icon_on.xpm  microphone_off.xpm  microphone_on.xpm
pds-screen-recorder/: #p1.glade#  ScreenRecorder.cpp  ScreenRecorder.h  p1.glade  p1.glade~  pds-screen-recorder.cpp  pds-screen-recorder.vcxproj  pds-screen-recorder.vcxproj.filters
pds-screen-recorder/Debug/: pds-screen-recorder.exe.recipe  pds-screen-recorder.ilk  pds-screen-recorder.vcxproj.FileListAbsolute.txt  vc142.idb
pds-screen-recorder/Debug/pds-scre.34f935b2.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  pds-screen-recorder.lastbuildstate  pds-screen-recorder.write.1u.tlog
pds-screen-recorder/x64/Debug/: pds-screen-recorder.exe.recipe  pds-screen-recorder.ilk  pds-screen-recorder.obj.enc  pds-screen-recorder.vcxproj.FileListAbsolute.txt  vc142.idb
pds-screen-recorder/x64/Debug/pds-scre.34f935b2.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  pds-screen-recorder.lastbuildstate  pds-screen-recorder.write.1u.tlog
src/: Interface.cpp  Interface.h  Recorder.cpp  Recorder.h  ScreenRecorder.cpp  ScreenRecorder.h  icon_off.cpp  icon_on.cpp  main.cpp  pds-screen-recorder.vcxproj  pds-screen-recorder.vcxproj.filters  style.css
src/exceptions/: avException.h  dataException.h  fsException.h
src/ffmpeg/: CMakeLists.txt  Codec.cpp  Dictionary.cpp  Format.cpp  Frame.cpp  Packet.cpp  Rescaler.cpp  Stream.cpp  ffmpeg.cpp  ffmpeg.h  ffmpegcpp.h  platform.cpp  utils.cpp
src/ffmpeg/include/: Codec.h  Dictionary.h  Format.h  Frame.h  Packet.h  Rescaler.h  Screen.h  Stream.h  Tracker.h  exceptions.h  ffmpeg.h  ffmpegc.h  platform.h  ptr_wrapper.h  utils.h  wrapper.h
src/lib/: CMakeLists.txt  README.md  Recorder.cpp  Recorder.h  Screen.cpp  utils.cpp
src/lib/ffmpeg_cpp/: CMakeLists.txt  Codec.cpp  Format.cpp  Frame.cpp  Packet.cpp  Rescaler.cpp  Stream.cpp  ffmpeg_cpp.cpp  platform.cpp
src/lib/ffmpeg_cpp/include/: Codec.h  Dictionary.h  Format.h  Frame.h  Packet.h  Rescaler.h  Stream.h  Tracker.h  ffmpeg_cpp.h  ffmpegc.h  platform.h  ptr_wrapper.h  wrapper.h
src/lib/include/: Screen.h  exceptions.h  utils.h
src/ui/: CMakeLists.txt  Interface.cpp
src/ui/include/: Interface.h
src/utils/: CMakeLists.txt  Screen.cpp
